--- a/_layouts/narrative.html
+++ b/_layouts/narrative.html
@@ -6,4 +6,8 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <p class="citation"> by {{ page.author }}</p>
   {{ content }}
+  
+<FORM METHOD="LINK" ACTION="https://via.hypothes.is/http://snowcloak.github.io/Moby-Dick/">
+<INPUT TYPE="submit" VALUE="Annotate">
+</FORM>
 </div>
