--- a/_layouts/drama.html
+++ b/_layouts/drama.html
@@ -5,4 +5,9 @@ layout: default
 <div class="drama">
   <h1 class="post-title">{{ page.title }}</h1>
   {{ content }}
+  
+<FORM METHOD="LINK" ACTION="https://via.hypothes.is/http://snowcloak.github.io/{{ page.title }}">
+<INPUT TYPE="submit" VALUE="Annotate">
+  
+  
 </div>
