--- a/_layouts/poem.html
+++ b/_layouts/poem.html
@@ -5,4 +5,7 @@ layout: default
 <div class="poetry">
   <h1 class="post-title">{{ page.title }}</h1>
   {{ content }}
+  
+<FORM METHOD="LINK" ACTION="https://via.hypothes.is/http://snowcloak.github.io/{{ page.title }}">
+<INPUT TYPE="submit" VALUE="Annotate">
 </div>
