--- a/_layouts/narrative.html
+++ b/_layouts/narrative.html
@@ -7,7 +7,7 @@ layout: default
   <p class="citation"> by {{ page.author }}</p>
   {{ content }}
   
-<FORM METHOD="LINK" ACTION="https://via.hypothes.is/{{ page.html }}">
+<FORM METHOD="LINK" ACTION="https://via.hypothes.is/http://snowcloak.github.io/{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}">
 <INPUT TYPE="submit" VALUE="Annotate">
 </FORM>
 </div>
